added time rows

--- a/index.html
+++ b/index.html
@@ -30,9 +30,35 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <!--<div class="row">
-        <d -->
-      </div>
+      <table>
+        <tr>
+          <th scope="row">9AM</th>
+        </tr>
+        <tr>
+          <th scope="row">10AM</th>
+        </tr>
+        <tr>
+          <th scope="row">11AM</th>
+        </tr>
+        <tr>
+          <th scope="row">12PM</th>
+        </tr>
+        <tr>
+          <th scope="row">1PM</th>
+        </tr>
+        <tr>
+          <th scope="row">2PM</th>
+        </tr>
+        <tr>
+          <th scope="row">3PM</th>
+        </tr>
+        <tr>
+          <th scope="row">4PM</th>
+        </tr>
+        <tr>
+          <th scope="row">5PM</th>
+        </tr>
+      <table>
 
     </div>
 
