changed "row" class on html

--- a/index.html
+++ b/index.html
@@ -30,33 +30,33 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <table>
+      <table class="time-block">
         <tr>
-          <th scope="row">9AM</th>
+          <th class="row">9AM</th>
         </tr>
         <tr>
-          <th scope="row">10AM</th>
+          <th class="row">10AM</th>
         </tr>
         <tr>
-          <th scope="row">11AM</th>
+          <th class="row">11AM</th>
         </tr>
         <tr>
-          <th scope="row">12PM</th>
+          <th class="row">12PM</th>
         </tr>
         <tr>
-          <th scope="row">1PM</th>
+          <th class="row">1PM</th>
         </tr>
         <tr>
-          <th scope="row">2PM</th>
+          <th class="row">2PM</th>
         </tr>
         <tr>
-          <th scope="row">3PM</th>
+          <th class="row">3PM</th>
         </tr>
         <tr>
-          <th scope="row">4PM</th>
+          <th class="row">4PM</th>
         </tr>
         <tr>
-          <th scope="row">5PM</th>
+          <th class="row">5PM</th>
         </tr>
       <table>
 
