added description ans save btn to rows

--- a/index.html
+++ b/index.html
@@ -30,36 +30,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <table class="time-block">
-        <tr>
-          <th class="row">9AM</th>
-        </tr>
-        <tr>
-          <th class="row">10AM</th>
-        </tr>
-        <tr>
-          <th class="row">11AM</th>
-        </tr>
-        <tr>
-          <th class="row">12PM</th>
-        </tr>
-        <tr>
-          <th class="row">1PM</th>
-        </tr>
-        <tr>
-          <th class="row">2PM</th>
-        </tr>
-        <tr>
-          <th class="row">3PM</th>
-        </tr>
-        <tr>
-          <th class="row">4PM</th>
-        </tr>
-        <tr>
-          <th class="row">5PM</th>
-        </tr>
-      <table>
-
+      <div class="time-block">
+        <table class="table">
+          <tr>
+            <th class="row">9AM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">10AM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">11AM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">12PM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">1PM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">2PM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">3PM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">4PM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+          <tr>
+            <th class="row">5PM</th>
+            <td class="description"></td>
+            <td class="saveBtn"></td>
+          </tr>
+        <table>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
